Fix balance color in dark mode

--- a/src/index/containers/cabinet/DexSwap/components/DexSwapInput/DexSwapInput.less
+++ b/src/index/containers/cabinet/DexSwap/components/DexSwapInput/DexSwapInput.less
@@ -163,3 +163,9 @@
     height: 32px;
   }
 }
+
+body.theme-dark .DexSwapInput {
+  &__balance {
+    color: var(--primary-blue);
+  }
+}
